--- a/Obesidade/modelo_obesidade.ipynb
+++ b/Obesidade/modelo_obesidade.ipynb
@@ -11972,6 +11972,482 @@
     "# Análise Univariada - Nível de Uso de Tela\n",
     "px.bar(df_obesidade.value_counts('Nivel_Uso_Tela') / len(df_obesidade) * 100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    2111.000000\n",
+       "mean       23.972525\n",
+       "std         6.308664\n",
+       "min        14.000000\n",
+       "25%        19.000000\n",
+       "50%        22.000000\n",
+       "75%        26.000000\n",
+       "max        61.000000\n",
+       "Name: Idade, dtype: float64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formulação de HipóUnicode\n",
+    "\n",
+    "# Faixa Etária Influencia em Obesidade?\n",
+    "df_obesidade['Idade'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Bucheting de Idade\n",
+    "bins = [10, 20, 30 , 40 , 50, 60, 70]\n",
+    "bins_ordinal = [0, 1, 2, 3, 4, 5]\n",
+    "labels_faixa_etaria = ['10-20', '20-30', '30-40', '40-50', '50-60', '60-70']\n",
+    "\n",
+    "df_obesidade['Faixa_Etaria_String'] = pd.cut(x = df_obesidade['Idade'], bins=bins, labels=labels_faixa_etaria, include_lowest = True)\n",
+    "df_obesidade['Faixa_Etaria'] = pd.cut(x = df_obesidade['Idade'], bins=bins, labels=bins_ordinal, include_lowest = True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Genero_Masculino</th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Historico_Familiar_Sobrepeso</th>\n",
+       "      <th>Consumo_Alta_Caloria_Com_Frequencia</th>\n",
+       "      <th>Consumo_Vegetais_Com_Frequencia</th>\n",
+       "      <th>Refeicoes_Dia</th>\n",
+       "      <th>Consumo_Alimentos_entre_Refeicoes</th>\n",
+       "      <th>Fumante</th>\n",
+       "      <th>Consumo_Agua</th>\n",
+       "      <th>Monitora_Calorias_Ingeridas</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Nivel_Uso_Tela</th>\n",
+       "      <th>Consumo_Alcool</th>\n",
+       "      <th>Transporte_Automovel</th>\n",
+       "      <th>Transporte_Bicicleta</th>\n",
+       "      <th>Transporte_Motocicleta</th>\n",
+       "      <th>Transporte_Publico</th>\n",
+       "      <th>Transporte_Caminhada</th>\n",
+       "      <th>Obesidade</th>\n",
+       "      <th>Faixa_Etaria_String</th>\n",
+       "      <th>Faixa_Etaria</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20-30</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20-30</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20-30</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20-30</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20-30</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2106</th>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10-20</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2107</th>\n",
+       "      <td>0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20-30</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2108</th>\n",
+       "      <td>0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20-30</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2109</th>\n",
+       "      <td>0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20-30</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2110</th>\n",
+       "      <td>0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20-30</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2111 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Genero_Masculino  Idade  Historico_Familiar_Sobrepeso  \\\n",
+       "0                    0     21                             1   \n",
+       "1                    0     21                             1   \n",
+       "2                    1     23                             1   \n",
+       "3                    1     27                             0   \n",
+       "4                    1     22                             0   \n",
+       "...                ...    ...                           ...   \n",
+       "2106                 0     20                             1   \n",
+       "2107                 0     21                             1   \n",
+       "2108                 0     22                             1   \n",
+       "2109                 0     24                             1   \n",
+       "2110                 0     23                             1   \n",
+       "\n",
+       "      Consumo_Alta_Caloria_Com_Frequencia  Consumo_Vegetais_Com_Frequencia  \\\n",
+       "0                                       0                                2   \n",
+       "1                                       0                                3   \n",
+       "2                                       0                                2   \n",
+       "3                                       0                                3   \n",
+       "4                                       0                                2   \n",
+       "...                                   ...                              ...   \n",
+       "2106                                    1                                3   \n",
+       "2107                                    1                                3   \n",
+       "2108                                    1                                3   \n",
+       "2109                                    1                                3   \n",
+       "2110                                    1                                3   \n",
+       "\n",
+       "      Refeicoes_Dia  Consumo_Alimentos_entre_Refeicoes  Fumante  Consumo_Agua  \\\n",
+       "0                 3                                  1        0             2   \n",
+       "1                 3                                  1        1             3   \n",
+       "2                 3                                  1        0             2   \n",
+       "3                 3                                  1        0             2   \n",
+       "4                 1                                  1        0             2   \n",
+       "...             ...                                ...      ...           ...   \n",
+       "2106              3                                  1        0             1   \n",
+       "2107              3                                  1        0             2   \n",
+       "2108              3                                  1        0             2   \n",
+       "2109              3                                  1        0             2   \n",
+       "2110              3                                  1        0             2   \n",
+       "\n",
+       "      Monitora_Calorias_Ingeridas  ...  Nivel_Uso_Tela  Consumo_Alcool  \\\n",
+       "0                               0  ...               1               0   \n",
+       "1                               1  ...               0               1   \n",
+       "2                               0  ...               1               2   \n",
+       "3                               0  ...               0               2   \n",
+       "4                               0  ...               0               1   \n",
+       "...                           ...  ...             ...             ...   \n",
+       "2106                            0  ...               0               1   \n",
+       "2107                            0  ...               0               1   \n",
+       "2108                            0  ...               0               1   \n",
+       "2109                            0  ...               0               1   \n",
+       "2110                            0  ...               0               1   \n",
+       "\n",
+       "      Transporte_Automovel  Transporte_Bicicleta  Transporte_Motocicleta  \\\n",
+       "0                        0                     0                       0   \n",
+       "1                        0                     0                       0   \n",
+       "2                        0                     0                       0   \n",
+       "3                        0                     0                       0   \n",
+       "4                        0                     0                       0   \n",
+       "...                    ...                   ...                     ...   \n",
+       "2106                     0                     0                       0   \n",
+       "2107                     0                     0                       0   \n",
+       "2108                     0                     0                       0   \n",
+       "2109                     0                     0                       0   \n",
+       "2110                     0                     0                       0   \n",
+       "\n",
+       "      Transporte_Publico  Transporte_Caminhada  Obesidade  \\\n",
+       "0                      1                     0          0   \n",
+       "1                      1                     0          0   \n",
+       "2                      1                     0          0   \n",
+       "3                      0                     1          0   \n",
+       "4                      1                     0          0   \n",
+       "...                  ...                   ...        ...   \n",
+       "2106                   1                     0          1   \n",
+       "2107                   1                     0          1   \n",
+       "2108                   1                     0          1   \n",
+       "2109                   1                     0          1   \n",
+       "2110                   1                     0          1   \n",
+       "\n",
+       "      Faixa_Etaria_String Faixa_Etaria  \n",
+       "0                   20-30            1  \n",
+       "1                   20-30            1  \n",
+       "2                   20-30            1  \n",
+       "3                   20-30            1  \n",
+       "4                   20-30            1  \n",
+       "...                   ...          ...  \n",
+       "2106                10-20            0  \n",
+       "2107                20-30            1  \n",
+       "2108                20-30            1  \n",
+       "2109                20-30            1  \n",
+       "2110                20-30            1  \n",
+       "\n",
+       "[2111 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_obesidade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
