--- a/Obesidade/modelo_obesidade.ipynb
+++ b/Obesidade/modelo_obesidade.ipynb
@@ -19719,6 +19719,79 @@
     "# Mostrar o Report\n",
     "sv_obesidade_report.show_notebook()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Treinamento do Modelo - Baseline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dividir Dados de Treino e Teste\n",
+    "X = df_obesidade.drop(columns=['Obesidade', 'Idade', 'Faixa_Etaria_String'], axis=1)\n",
+    "y = df_obesidade['Obesidade']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=51, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Treinamento do Modelo\n",
+    "model_baseline = GaussianNB()\n",
+    "model_baseline.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Métricas Modelo Baseline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predizer valores do conjunto de testes\n",
+    "y_pred = model_baseline.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Avaliando o desempenho do modelo\n",
+    "classification_report_str = classification_report(y_test, y_pred)\n",
+    "recall_baseline = recall_score(y_test, y_pred, average='macro')\n",
+    "print(f'Relatório de Classificação: \\n{classification_report_str}')\n",
+    "print(f'Recall: \\n{recall_baseline}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mostrar Matriz de Confusão\n",
+    "confusion_matrix_modelo_baseline = confusion_matrix(y_test, y_pred)\n",
+    "disp_modelo_baseline = ConfusionMatrixDisplay(confusion_matrix_modelo_baseline)\n",
+    "disp_modelo_baseline.plot()"
+   ]
   }
  ],
  "metadata": {
