Treinamento do Modelo - Seleção de Melhores Fetures

--- a/Obesidade/modelo_obesidade.ipynb
+++ b/Obesidade/modelo_obesidade.ipynb
@@ -19792,6 +19792,118 @@
     "disp_modelo_baseline = ConfusionMatrixDisplay(confusion_matrix_modelo_baseline)\n",
     "disp_modelo_baseline.plot()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Treinamento Modelo - Automated Feature Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select KBest - Seleciona as K melhores features, baseado em um teste\n",
+    "kbest = SelectKBest(score_func=chi2, k = 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_kbest = kbest.fit_transform(X_train, y_train)\n",
+    "X_train_kbest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Features Selecionadas\n",
+    "kbest_features = kbest.get_support(indices=True)\n",
+    "X_train_best_features = X_train.iloc[:, kbest_features]\n",
+    "X_train_best_features.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kbest_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Treinar Modelo com melhores features\n",
+    "modelo_kbest = GaussianNB()\n",
+    "modelo_kbest.fit(X_train_best_features, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Métricas Modelo Select KBest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filtrar as features nos dados de teste\n",
+    "X_test_kbest = kbest.transform(X_test)\n",
+    "X_test_best_features = X_test.iloc[:, kbest_features]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predizer valores do conjunto de testes\n",
+    "y_pred_kbest = modelo_kbest.predict(X_test_best_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Avaliando o desempenho do modelo\n",
+    "classification_report_str = classification_report(y_test, y_pred_kbest)\n",
+    "recall_baseline = recall_score(y_test, y_pred_kbest, average='macro')\n",
+    "print(f'Relatório de Classificação (KBest): \\n{classification_report_str}')\n",
+    "print(f'Recall (KBest): \\n{recall_baseline}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mostrar Matriz de Confusão\n",
+    "confusion_matrix_modelo_kbest = confusion_matrix(y_test, y_pred)\n",
+    "disp_modelo_kbest = ConfusionMatrixDisplay(confusion_matrix_modelo_kbest)\n",
+    "disp_modelo_kbest.plot()"
+   ]
   }
  ],
  "metadata": {
