Otimização de hiperparâmetros - criação de função

--- a/Obesidade/modelo_obesidade.ipynb
+++ b/Obesidade/modelo_obesidade.ipynb
@@ -19904,6 +19904,60 @@
     "disp_modelo_kbest = ConfusionMatrixDisplay(confusion_matrix_modelo_kbest)\n",
     "disp_modelo_kbest.plot()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tuning de Hiperparâmetros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ajustar hiperparametros do SelectKBest\n",
+    "# k = k melhores features conforme chi2\n",
+    "\n",
+    "def naivebayes_optuna(trial):\n",
+    "\n",
+    "    k = trial.suggest_int('k', 1, 18)\n",
+    "\n",
+    "    X_train_kbest = kbest.fit_transform(X_train, y_train)\n",
+    "\n",
+    "    kbest_features = kbest.get_support(indices=True)\n",
+    "    X_train_best_features = X_train.iloc[:, kbest_features]\n",
+    "\n",
+    "    # Treinar modelo com melhores features\n",
+    "    model_kbest_optuna = GaussianNB()\n",
+    "    model_kbest_optuna.fit(X_train_best_features, y_train)\n",
+    "\n",
+    "    # Aplicar o seletor de features no conjunto de testes\n",
+    "    X_test_kbest = kbest.transform(X_test)\n",
+    "    X_test_best_features = X_test.iloc[:, kbest_features]\n",
+    "    \n",
+    "    # Predizer valores\n",
+    "    y_pred_kbest = model_kbest_optuna.predict(X_test_best_features)\n",
+    "\n",
+    "    # Avaliar Recall\n",
+    "    recall_optuna = recall_score(y_test, y_pred_kbest, average='macro')\n",
+    "\n",
+    "    return k, recall_optuna"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rodar o estudo dos hiperparametros\n",
+    "search_space = {'k', range(1, 19)}\n",
+    "estudo_naivebayes = optuna.create_study(sampler=optuna.samplers.GridSampler(search_space=search_space), direction=['minimize', 'maximize'])\n",
+    "estudo_naivebayes.optimize(naivebayes_optuna, n_trials=50)"
+   ]
   }
  ],
  "metadata": {
